<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.MainActivity">

    <TextView
        android:textColor="#1C1C1C"
        android:layout_gravity="start"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/payments"
        android:textSize="29sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/total_amount_0"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:layout_marginBottom="10dp"
        android:layout_gravity="start"
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp" />

    <TextView
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/btn_add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_payment"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:id="@+id/btn_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
